# Agentic-AI

./: README.md  customer_churn_dataset.csv  explain_model.py  model_train.py  project_structure  pyproject.toml  requirements.txt  setup.py  tests.py  visualize_explainations.py
