[tool.poetry]
name = "agentic_ai"
version = "0.1.0"
description = "An agentic AI framework"
authors = ["Your Name"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


